# SecureChat

./: .gitignore  CMakeLists.txt  SecureChat.pro  main.cpp  request.cpp  request.h
includes/: User.h
libs/restclient-cpp/: version.h
src/: Backend.cpp  Backend.h  ContactInfo.cpp  ContactInfo.h  ContactPage.qml  CurrentUser.cpp  CurrentUser.h  Dialog.cpp  Dialog.h  DialogPage.qml  Message.cpp  Message.h  User.cpp  User.h  cipherhelper.cpp  cipherhelper.h  contactlist.cpp  contactlist.h  main.cpp  main.qml  messagelist.cpp  messagelist.h  messageworker.cpp  messageworker.h  qml.qrc  request.cpp
src/controllers/: ContactController.cpp  ContactController.h  DialogController.cpp  DialogController.h  UserController.cpp  UserController.h
src/models/: contactlist.cpp  contactlist.h  messagelist.cpp  messagelist.h
src/structs/: ContactInfo.cpp  ContactInfo.h  Dialog.cpp  Dialog.h  Message.cpp  Message.h  User.cpp  User.h
src/ui/: ContactPage.qml  DialogPage.qml  LoginForm.ui.qml  LoginPage.qml  MessageEditor.qml  MessageView.qml  SettingsPage.qml  main.qml
src/utils/: Firebase.cpp  Firebase.h  cipherhelper.cpp  constants.h  cryptapi.cpp  cryptapi.h  firebaseapi.cpp  firebaseapi.h  json.h  messageworker.cpp  messageworker.h  request.h  restfirebaseapi.cpp  restfirebaseapi.h
test/: CMakeLists.txt  testUser.cpp
test/gtest-1.6.0/: CMakeLists.txt
